Fixed shrinking banner on tablet or smaller layouts

--- a/css/style.css
+++ b/css/style.css
@@ -6756,6 +6756,9 @@ h3 {
   font-size: 16px;
   margin-bottom: 30px;
 }
+h4 {
+  font-size: 15px;
+}
 .main-content {
   margin: 63px 0 0 0;
 }
@@ -6941,6 +6944,9 @@ a[name="skipnav"] {
 }
 #landing-page {
   padding-bottom: 90px;
+}
+#landing-page .banner {
+  height: 84px;
 }
 #landing-page #hc-gov-assets h1 {
   margin-top: 0px;
